# nand2tetris2

./: .gitignore  README.md
Week01/: DMux.hdl  DMux4Way.hdl  Mux.hdl  Mux8Way16.hdl  Xor.hdl
Week02/: ALU.hdl  Add16.hdl  FullAdder.hdl
Week03/a/: RAM64.hdl  RAM8.hdl
Week03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
Week04/fill/: Fill.asm
Week04/mult/: Mult.hack
Week05/: CPU.hdl  Computer.hdl  Memory.hdl
Week06/HackAssembler/: CMakeLists.txt
Week06/HackAssembler/HackAssembler/: CMakeLists.txt  Code.cpp  Code.h  HackAssembler.cpp  HackAssembler.h  Parser.cpp  Parser.h
Week07/ArgParser/: CMakeLists.txt
Week07/ArgParser/ArgParser/: ArgParser.hpp  CMakeLists.txt  main.cpp
Week07/MemoryAccess/BasicTest/: BasicTest.asm
Week07/MemoryAccess/PointerTest/: PointerTest.asm
Week07/MemoryAccess/StaticTest/: StaticTest.asm
Week07/StackArithmetic/SimpleAdd/: SimpleAdd.asm  SimpleAdd.vm
Week07/StackArithmetic/StackTest/: StackTest.asm
Week07/VMTranslatorI/: CMakeLists.txt
Week07/VMTranslatorI/VMTranslatorI/: CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  CommandSets.h  Enums.h  Parser.cpp  VMTranslatorI.cpp  VMTranslatorI.h
Week08/FunctionCalls/FibonacciElement/: FibonacciElement.asm
Week08/FunctionCalls/NestedCall/: NestedCall.asm
Week08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
Week08/FunctionCalls/StaticsTest/: StaticsTest.asm
Week08/ProgramFlow/BasicLoop/: BasicLoop.asm
Week08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
Week08/VMTranslator/: CMakeLists.txt
Week08/VMTranslator/VMTranslator/: CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  CommandSets.cpp  Enums.h  Parser.cpp  Parser.h  VMTranslator.cpp
Week10/ExpressionLessSquare/: Square.jack
Week10/JackAnalyzer/: CMakeLists.txt
Week10/JackAnalyzer/JackAnalyzer/: CMakeLists.txt  CompilationEngine.cpp  CompilationEngine.h  DebugUtils.hpp  JackAnalyzer.cpp  JackAnalyzer.h  JackTokenizer.cpp  JackTokenizer.h  XMLWriter.cpp  XMLWriter.h
Week10/Square/: Main.jack  Main.xmltst  Square.xmltst  SquareGame.xmltst
